# aoc

./: .gitignore
c/2015/: '  CMakeLists.txt  build_and_run.sh  init_day.sh
c/2015/day1/: CMakeLists.txt
c/2015/day1/src/: day1.c
c/2015/day10/: CMakeLists.txt
c/2015/day10/src/: day10.c
c/2015/day11/: CMakeLists.txt
c/2015/day11/src/: day11.c
c/2015/day12/: CMakeLists.txt
c/2015/day12/src/: day12.c
c/2015/day13/: CMakeLists.txt
c/2015/day13/src/: day13.c
c/2015/day14/: CMakeLists.txt
c/2015/day14/src/: day14.c
c/2015/day15/: CMakeLists.txt
c/2015/day15/src/: day15.c
c/2015/day16/: CMakeLists.txt
c/2015/day16/src/: day16.c
c/2015/day17/: CMakeLists.txt
c/2015/day17/src/: day17.c
c/2015/day18/: CMakeLists.txt
c/2015/day18/src/: day18.c
c/2015/day19/: CMakeLists.txt
c/2015/day19/src/: day19.c
c/2015/day2/: CMakeLists.txt
c/2015/day2/src/: day2.c
c/2015/day3/: CMakeLists.txt
c/2015/day3/src/: day3.c
c/2015/day4/: CMakeLists.txt
c/2015/day4/src/: day4.c
c/2015/day5/: CMakeLists.txt
c/2015/day5/src/: day5.c
c/2015/day6/: CMakeLists.txt
c/2015/day6/src/: day6.c
c/2015/day7/: CMakeLists.txt
c/2015/day7/src/: day7.c
c/2015/day8/: CMakeLists.txt
c/2015/day8/src/: day8.c
c/2015/day9/: CMakeLists.txt
c/2015/day9/src/: day9.c
c/2015/day_template/: CMakeLists.txt
c/2015/day_template/src/: day_template.c
c/2015/include/: aoc.h  array.h  array4c.h  bitutils.h  combinatorics4c.h  conway.h  debug.h  earley.h  file4c.h  fnv.h  generics4c.h  get_file.h  grid.h  hamiltonian.h  hamiltonian_path.h  hashset.h  hashtable.h  json4c.h  maritims_md5.h  math4c.h  munit.h  point.h  string4c.h  test4c.h
c/2015/include/generics/: array.h  generics.h  generics4c.h  object.h  types.h  value.h
c/2015/include/grammar/: chomsky.h  grammar.h  rule.h
c/2015/include/json/: lexer.h  parser.h  token.h
c/2015/include/testing/: assertions.h
c/2015/src/: aoc.c  array.c  array4c.c  bitutils.c  combinatorics4c.c  conway.c  earley.c  file4c.c  fnv.c  generics4c.c  get_file.c  grid.c  hamiltonian.c  hamiltonian_path.c  hashset.c  hashtable.c  json4c.c  maritims_md5.c  math4c.c  point.c  string4c.c  test4c.c
c/2015/src/days/: day1.c  day10.c  day11.c  day12.c  day13.c  day14.c  day15.c  day16.c  day17.c  day18.c  day2.c  day3.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c
c/2015/src/generics/: array.c  generics4c.c  object.c  value.c
c/2015/src/grammar/: chomsky.c  grammar.c  rule.c
c/2015/src/json/: lexer.c  parser.c  token.c
c/2015/tests/: CMakeLists.txt  test_array4c.c  test_chomsky.c  test_grammar.c  test_grid.c  test_hashset.c  test_hashtable.c  test_json.c  test_json4c.c  test_maritims_md5.c  test_math4c.c  test_point.c  test_string4c.c
c/2015/tests/src/: bitutils_tests.c  hashtable_tests.c  json4c_tests.c  maritims_md5_tests.c  point_tests.c
